# sql-db-engineer-agent

./: README.md  baseline.py  blog_post.md  demo_app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
api/: server.py
blog/: blog_post.md
env/: curriculum.py  db_simulator.py  graders.py  models.py  reward.py  scenario_generator.py
server/: app.py
training/: colab_notebook.py  evaluate_agent.py  generate_plots.py  generate_training_data.py  train_agent.py
